static/css/custom-navigation.css
#sidebar {
  width: 400px;
}

#sidebar ul.topics {
	margin: 1rem;
	margin-right: 0;
	margin-left: 0 !important;
}
#sidebar ul li li {

}

#sidebar ul.topics > li ul > li > ul li a {
	margin: 0 !important;
}

#sidebar ul.topics > li ul > li > a {
	position: relative;
	bottom: 9px;
	left: 10px;
}

ul.nav-list.treeview {
  margin-top: 10px !important;
  margin-bottom: 10px !important;
}


.treeview, .treeview ul {
	padding: 0;
	margin: 0;
	list-style: none;
}

.treeview ul {
	background-color: transparent;
	margin-top: 4px;
}

.treeview .hitarea {
	background: url(images/treeview-default.gif) -64px -25px no-repeat;
	height: 16px;
	width: 16px;
	margin-left: -20px;
	float: left;
	cursor: pointer;
	position: relative;
	left: 17px;
}
/* fix for IE6 */
* html .hitarea {
	display: inline;
	float:none;
}

.treeview li {
	margin: 0;
	padding: 3px 0pt 3px 16px;
}

.treeview a.selected {
	background-color: #eee;
}

#treecontrol { margin: 1em 0; display: none; }

.treeview .hover { color: red; cursor: pointer; }

.treeview li { background: url(images/treeview-default-line.gif) 0 0 no-repeat; }
.treeview li.collapsable, .treeview li.expandable { background-position: 17px -176px; }

.treeview .expandable-hitarea { background-position: -80px -3px; }

.treeview li.last { background-position: 0 -1766px; background-position-x: 15px; }
.treeview li.lastCollapsable, .treeview li.lastExpandable { background-image: url(images/treeview-default.gif); }
.treeview li.lastCollapsable { background-position: 17px -111px }
.treeview li.lastExpandable { background-position: -15px -68px; height: 15px }

.treeview div.lastCollapsable-hitarea, .treeview div.lastExpandable-hitarea { background-position: 0; }

.treeview-red li { background-image: url(images/treeview-red-line.gif); }
.treeview-red .hitarea, .treeview-red li.lastCollapsable, .treeview-red li.lastExpandable { background-image: url(images/treeview-red.gif); }

.treeview-black li { background-image: url(images/treeview-black-line.gif); }
.treeview-black li li { background-image: url(images/treeview-default-line.gif); background-position-x: 15px; }
.treeview-black .hitarea, .treeview-black li.lastCollapsable, .treeview-black li.lastExpandable { background-image: url(images/treeview-black.gif); }

.treeview-gray li { background-image: url(images/treeview-gray-line.gif); }
.treeview-gray .hitarea, .treeview-gray li.lastCollapsable, .treeview-gray li.lastExpandable { background-image: url(images/treeview-gray.gif); }

.treeview-famfamfam li { background-image: url(images/treeview-famfamfam-line.gif); }
.treeview-famfamfam .hitarea, .treeview-famfamfam li.lastCollapsable, .treeview-famfamfam li.lastExpandable { background-image: url(images/treeview-famfamfam.gif); }


.filetree li { padding: 3px 0 2px 16px; }
.filetree span.folder, .filetree span.file { padding: 1px 0 1px 16px; display: block; }
.filetree span.folder { background: url(images/folder.gif) 0 0 no-repeat; }
.filetree li.expandable span.folder { background: url(images/folder-closed.gif) 0 0 no-repeat; }
.filetree span.file { background: url(images/file.gif) 0 0 no-repeat; }

#live-filter-navigation {
	position: relative;
	width: 100%;
	float: none;
	text-align: center;
	color: #777;
	border: 1px solid #ddd;
}
#live-filter-navigation #livefilter-input {
	border: 1px;
	background: transparent;
	padding: 8px 10px 5px;
	outline: none;
}

#live-filter-navigation #search-label-livefilter::before {
	display: inline-block;
	content: "";
	background-image: url(data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2036%2036%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill%3A%23000000%3B%7D%3C%2Fstyle%3E%3C%2Fdefs%3E%3Ctitle%3ESearch%3C%2Ftitle%3E%3Cg%20id%3D%22icons%22%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22M15%2C4.05A10.95%2C10.95%2C0%2C1%2C1%2C4.05%2C15%2C11%2C11%2C0%2C0%2C1%2C15%2C4.05M15%2C2A13%2C13%2C0%2C1%2C0%2C28%2C15%2C13%2C13%2C0%2C0%2C0%2C15%2C2Z%22%2F%3E%3Cpath%20class%3D%22cls-1%22%20%20d%3D%22M33.71%2C32.29l-7.37-7.42-1.42%2C1.41%2C7.37%2C7.42a1%2C1%2C0%2C1%2C0%2C1.42-1.41Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E);
	color: #0c0c0c;
	background-repeat: no-repeat;
	background-size: contain;
	cursor: pointer;
	height: 1rem;
	width: 1rem;
	margin: 1rem 0 0;
	vertical-align: top;
	position: absolute;
	left: 35px;
	bottom: 5px;
}

/* ajax live search */
#live-filter-navigation ul#content {
  list-style-type:none;position:relative;z-index:10;padding:0;
}
#search-results {
  background-color: #ffffff;
  border: 1px solid #00364d;
  box-shadow: 0 1.6px 3.6px 0 #b3b3b3, 0 0.3px 0.9px 0 #b3b3b3;
  border-radius: 5px;
  cursor: default;
  list-style-type: none;
  margin: 2px 0 0!important;
  max-height: 18rem;
  max-width: 100%;
  min-width: 100%;
  padding: 0;
  position: absolute;
  z-index: 1000;
  overflow: scroll;
  overflow-y: visible;
}
#search-results .tutup {
  position: absolute;
  visibility: hidden;
  font-size: 17px;
  font-weight: bold;
  right: 10px;
  z-index: 300;
  color: #d7d7d7;
  cursor: pointer;
  text-decoration: none;
}
#search-results .tutup.active {
  visibility: visible;
}

#live-filter-navigationul#content.active { border:1px solid #ccc;background-color: #fff;padding:5px 0; display: block}
#live-filter-navigation ul#content li {
  background-color: #ffffff;
  margin: 5px 10px;
  padding: 5px 10px;
}
#live-filter-navigation ul#content li a {
  color: #428bca;
  text-decoration: none;
  padding: 2px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 12px;
  font-weight: bold;
}

#live-filter-navigation ul#content li a span {
  font-size: 10px;
  font-weight: normal;
}

